# g4-validation

./: Geant4PackageCache.cmake  README.md
analysis/utils/: meson.build  utilities.cc  utilities.h
hallb/elastic/: CMakeLists.txt  README.md  elastic.cc  init_vis.mac  vis.mac
hallb/elastic/analysis/: README.md  elastic_analysis.C  meson.build
hallb/elastic/analysis/histos/: histos.cc  histos.h  meson.build  show_W.cc
hallb/elastic/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
hallb/elastic/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
hallb/rga/: CMakeLists.txt  README.md  init_vis.mac  rga.cc  run.mac  target_kapton_wall.stl  target_torlon_base.stl  vis.mac
hallb/rga/analysis/: README.md  meson.build  rga_analysis.C  rootlogon.C
hallb/rga/analysis/histos/: histos.cc  histos.h  meson.build  show_W.cc
hallb/rga/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  MagneticField.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
hallb/rga/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  MagneticField.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
include/: EventFilters.hh  V4.h  fluxHit.hh  fluxSD.hh  g4globals.hh
src/: EventFilters.cc  V4.cc  extPhysics.cc  fluxHit.cc  fluxSD.cc  g4globals.cc
template/: CMakeLists.txt  README.md  template.cc  vis.mac
template/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  MagneticField.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
template/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  MagneticField.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
